LPD-60078 Set JAVA_OPTS when undefined before running tests